--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <title>加入星斩</title>
 </head>
 <body>
-<img src="Join.png" alt="加入星斩" title="加入星斩" style="text-align:center;">
+  <div style="text-align:center;">
+<img src="Join.png" alt="加入星斩" title="加入星斩">
+  </div>
 </body>
 </html>
